syntax = "proto3";

package pb;

option go_package = "ecommerce_fiber/internal/pb";

import "user.proto";

message RegisterRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message RegisterResponse{
    User user = 1;
}

message AuthResponse{
    string access_token = 1;
    string refresh_token =  2;
}


message RefreshTokenRequest{
    string refresh_token = 1;
}


service AuthService{
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse);
    rpc LoginUser(LoginRequest) returns (AuthResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
}